[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/blank_icon.png" type="Texture" id=1]
[ext_resource path="res://units/GenericUnit.gd" type="Script" id=2]
[ext_resource path="res://art/icon_white_background.png" type="Texture" id=3]
[ext_resource path="res://art/selection_ring.png" type="Texture" id=4]
[ext_resource path="res://utilities/health_bar.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 65.0

[sub_resource type="CircleShape2D" id=3]
radius = 125.0

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="GenericUnit" type="KinematicBody2D" groups=["all_units"]]
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource( 2 )

[node name="SelectedSprite" type="Sprite" parent="."]
scale = Vector2( 0.358, 0.358 )
texture = ExtResource( 4 )

[node name="WhiteBackground" type="Sprite" parent="."]
scale = Vector2( 0.358, 0.358 )
texture = ExtResource( 3 )

[node name="IconSprite" type="Sprite" parent="."]
scale = Vector2( 0.358, 0.358 )
texture = ExtResource( 1 )

[node name="MeleeZoneEngage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="MeleeZoneCollision" type="CollisionShape2D" parent="MeleeZoneEngage"]
shape = SubResource( 2 )

[node name="MeleeZoneDisengage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="MeleeZoneCollision" type="CollisionShape2D" parent="MeleeZoneDisengage"]
shape = SubResource( 3 )

[node name="UnitBodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBarPosition" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -65 )

[connection signal="mouse_entered" from="." to="." method="_on_GenericUnit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GenericUnit_mouse_exited"]
[connection signal="body_entered" from="MeleeZoneEngage" to="." method="_on_MeleeZoneEngage_body_entered"]
[connection signal="body_exited" from="MeleeZoneDisengage" to="." method="_on_MeleeZoneDisengage_body_exited"]
